--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
   </header>
   <div class="container">
     <div class="text-center mb-5">
-      <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#formModal">Add Task</button>
+      <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#formModal">👉 Add Task 👈</button>
     </div>
     <!-- Todo: Create a modal with a form to add tasks -->
     <div class="modal fade" id=“formModal” tabindex=“-1” aria-labelledby=“formModalLabel” aria-hidden=“true”>
       <div class=“modal-dialog”>
           <div class=“modal-content”>
               <div class=“modal-header”>
-                  <h5 class=“modal-title” id=“formModalLabel”>Add New Task</h5>
+                  <h5 class=“modal-title” id=“formModalLabel”>👉 Add New Task 👈</h5>
                   <button type=“button” class=“close” data-bs-dismiss=“modal” aria-label=“Close”>
                       <span>&times;</span>
                   </button>
@@ -63,7 +63,7 @@
       <div class="col-12 col-lg-4 d-flex">
         <div id="to-do" class="card border-light mb-3 lane flex-grow-1">
           <div class="card-header bg-white">
-            <h2 class="card-title mb-1">To Do</h2>
+            <h2 class="card-title mb-1">💭To Do💭</h2>
           </div>
           <div class="card-body bg-light">
             <div id="todo-cards"></div>
@@ -73,7 +73,7 @@
       <div class="col-12 col-lg-4 d-flex">
         <div id="in-progress" class="card border-light mb-3 lane flex-grow-1">
           <div class="card-header bg-white">
-            <h2 class="card-title mb-1">In Progress</h2>
+            <h2 class="card-title mb-1">🔨In Progress🔨</h2>
           </div>
           <div class="card-body bg-light">
             <div id="in-progress-cards"></div>
@@ -83,7 +83,7 @@
         <div class="col-12 col-lg-4 d-flex">
           <div id="done" class="card border-light mb-3 lane flex-grow-1">
             <div class="card-header bg-white">
-              <h2 class="card-title mb-1">Done</h2>
+              <h2 class="card-title mb-1">🎯Done🎯</h2>
             </div>
             <div class="card-body bg-light">
               <div id="done-cards"></div>
