--- a/index.html
+++ b/index.html
@@ -1,107 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="icon" href="./assets/images/faviconTJW.png" />
+    <title>Task Board</title>
+  </head>
 
-  <link rel="stylesheet" href="./assets/css/style.css" />
-  <title>Task Board</title>
-</head>
-
-<body>
-  <header class="p-4 mb-4 text-center border-bottom border-5">
-    <h1 class="display-3">Task Board</h1>
-    <p class="lead">A simple Kanban board for task management</p>
-  </header>
-  <div class="container">
-    <div class="text-center mb-5">
-      <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#formModal">👉 Add Task 👈</button>
-    </div>
-    <!-- Todo: Create a modal with a form to add tasks -->
-    <div class="modal fade" id=“formModal” tabindex=“-1” aria-labelledby=“formModalLabel” aria-hidden=“true”>
-      <div class=“modal-dialog”>
-          <div class=“modal-content”>
-              <div class=“modal-header”>
-                  <h5 class=“modal-title” id=“formModalLabel”>👉 Add New Task 👈</h5>
-                  <button type=“button” class=“close” data-bs-dismiss=“modal” aria-label=“Close”>
-                      <span>&times;</span>
-                  </button>
-              </div>
-              <div class=“modal-body”>
-                  <form id=“taskForm”>
-                      <div class=“form-group”>
-                          <label for=“taskTitle”>Task Title</label>
-                          <input type=“text” class=“form-control” id=“taskTitle” placeholder=“Enter task name” required>
-                      </div>
-                      <div class=“form-group”>
-                        <label for=“taskDate”>Task Date</label>
-                        <input type=“text” class=“form-control” id=“taskDate” placeholder=“Task date” required>
-                    </div>
-                      <div class=“form-group”>
-                          <label for=“taskDescription”> Task Description</label>
-                          <textarea class=“form-control” id=“taskDescription” rows=“3” placeholder=“Enter task description” required></textarea>
-                      </div>
-                  </form>
-              </div>
-              <div class=“modal-footer”>
-                  <button type=“button” class=“btn btn-secondary” data-bs-dismiss=“modal”>Close</button>
-                  <button type=“submit” class=“btn btn-primary” id=“taskbutton” form=“taskForm”>Add Task</button>
-              </div>
-          </div>
+  <body>
+    <header class="p-4 mb-4 text-center border-bottom border-5">
+      <h1 class="display-3">Task Board</h1>
+      <p class="lead">A simple Kanban board for task management</p>
+    </header>
+    <div class="container">
+      <div class="text-center mb-5">
+        <button
+          class="btn btn-success"
+          data-bs-toggle="modal"
+          data-bs-target="#modal"
+        >
+          Add Task
+        </button>
       </div>
-  </div>
-  <!--Modal ends here-->
-  <div class=“modal fade” id=“formModal” tabindex=“-1” aria-labelledby=“formModalLabel” aria-hidden=“true”>
-    <div class="row swim-lanes text-center justify-content-between">
-      <div class="col-12 col-lg-4 d-flex">
-        <div id="to-do" class="card border-light mb-3 lane flex-grow-1">
-          <div class="card-header bg-white">
-            <h2 class="card-title mb-1">💭To Do💭</h2>
-          </div>
-          <div class="card-body bg-light">
-            <div id="todo-cards"></div>
+      <!-- modal from getbootstrap.com -->
+      <div
+        class="modal fade"
+        id="modal"
+        tabindex="-1"
+        aria-labelledby="modalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="modalLabel">👉 Add New Task 👈</h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <!-- task title, task date, task description -->
+              <div class="form-floating mb-3">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="taskTitle"
+                  placeholder="add task title here"
+                />
+                <label for="card-header">🗒️ Task Title</label>
+              </div>
+
+              <div class="form-floating mb-3">
+                <input
+                  type="datetime-local"
+                  class="form-control"
+                  id="taskDueDate"
+                  placeholder="enter date here"
+                />
+                <label for="card-date">🗓️ Task Date</label>
+              </div>
+
+              <div class="form-floating mb-3">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="taskDescription"
+                  placeholder="describe task here"
+                />
+                <label for="card-body">✍️ Task Description</label>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-dismiss="modal"
+              >
+                Close
+              </button>
+              <button type="button" class="btn btn-primary" id="save-button">
+                Save Changes
+              </button>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-12 col-lg-4 d-flex">
-        <div id="in-progress" class="card border-light mb-3 lane flex-grow-1">
-          <div class="card-header bg-white">
-            <h2 class="card-title mb-1">🔨In Progress🔨</h2>
-          </div>
-          <div class="card-body bg-light">
-            <div id="in-progress-cards"></div>
+      <!-- modal ends here -->
+      <div class="row swim-lanes text-center justify-content-between">
+        <div class="col-12 col-lg-4 d-flex">
+          <div id="to-do" class="card border-light mb-3 lane flex-grow-1">
+            <div class="card-header bg-white">
+              <h2 class="card-title mb-1">💭 To Do 💭</h2>
+            </div>
+            <div class="card-body bg-light">
+              <div id="to-do-cards"></div>
+            </div>
           </div>
         </div>
+        <div class="col-12 col-lg-4 d-flex">
+          <div id="in-progress" class="card border-light mb-3 lane flex-grow-1">
+            <div class="card-header bg-white">
+              <h2 class="card-title mb-1">🔨 In Progress 🔨</h2>
+            </div>
+            <div class="card-body bg-light">
+              <div id="in-progress-cards"></div>
+            </div>
+          </div>
         </div>
         <div class="col-12 col-lg-4 d-flex">
           <div id="done" class="card border-light mb-3 lane flex-grow-1">
             <div class="card-header bg-white">
-              <h2 class="card-title mb-1">🎯Done🎯</h2>
+              <h2 class="card-title mb-1">🎯 Done 🎯</h2>
             </div>
             <div class="card-body bg-light">
               <div id="done-cards"></div>
+            </div>
           </div>
-          </div>
+        </div>
       </div>
     </div>
-  </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
-    integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+      integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
+      crossorigin="anonymous"
+    ></script>
 
-  <script src="./assets/js/script.js"></script>
-</body>
-
+    <script src="./assets/js/script.js"></script>
+  </body>
 </html>
