--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <body>
     <header class="p-4 mb-4 text-center border-bottom border-5">
-      <h1 class="display-3">Task Board</h1>
+      <h1 class="display-3">🗣️ Task Board</h1>
       <p class="lead">A simple Kanban board for task management</p>
     </header>
     <div class="container">
