--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     />
 
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="icon" href="./assets/images/faviconTJW.png" />
+    <link rel="icon" href="assets/images/faviconSA.png">
     <title>Task Board</title>
   </head>
 
@@ -79,7 +79,7 @@
                   type="datetime-local"
                   class="form-control"
                   id="taskDueDate"
-                  placeholder="enter date here"
+                  placeholder="Select a date"
                 />
                 <label for="card-date">🗓️ Task Date</label>
               </div>
