--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     />
 
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="icon" href="./assets/images/faviconSA.png" />
     <title>Task Board</title>
   </head>
 
